fitype added in total page

--- a/total.html
+++ b/total.html
@@ -178,54 +178,167 @@
                                 <table class="table">
                                 <thead class="thead-primary">
                                   <tr>
-                                    <th>TLD</th>
-                                    <th>Duration</th>
-                                    <th>Registration</th>
-                                    <th>Renewal</th>
-                                    <th>Transfer</th>
-                                    <th>Register</th>
+                                    <th>Fi types</th>
+                                    <th>Maturity Date</th>
+                                    <th>Current value</th>
+                                    <th>Invested value</th>
+                                    <th>Liquidity</th>
                                   </tr>
                                 </thead>
                                 <tbody>
                                   <tr>
-                                    <th scope="row" class="scope" >.com</th>
-                                    <td>1 Year</td>
-                                    <td>$70.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
+                                    <td scope="row" class="scope">Deposit</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
                                   </tr>
                                   <tr>
-                                    <td scope="row" class="scope">1 Year</td>
-                                    <td>$70.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
+                                    <td scope="row" class="scope">Recurring deposit</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
                                   </tr>
                                   <tr>
-                                    <th scope="row" class="scope" >.org</th>
-                                    <td>1 Year</td>
-                                    <td>$70.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
+                                    <td scope="row" class="scope">Term deposit</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
                                   </tr>
                                   <tr>
-                                    <th scope="row" class="scope" >.info</th>
-                                    <td>1 Year</td>
-                                    <td>$70.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
-                                    <td>$5.00</td>
+                                    <td scope="row" class="scope">Certificate of deposit</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
+                                    <td>Coming soon.</td>
                                   </tr>
                                   <tr>
-                                    <th scope="row" class="scope border-bottom-0">.me</th>
-                                    <td class="border-bottom-0">1 Year</td>
-                                    <td class="border-bottom-0">$45.00</td>
-                                    <td class="border-bottom-0">$5.00</td>
-                                    <td class="border-bottom-0">$5.00</td>
-                                    <td class="border-bottom-0">$45.00</td>
+                                    <td scope="row" class="scope">Indian deposit recipt</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Insurance Policies</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">ULIP</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Employee provident fund</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Public provident fund</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Mutual funds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Bonds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Deventures</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Exchange Traded funds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">National Pension mission</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Government securities</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Commercial Paper</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">REIF</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Infrastructure investment funds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Alternate investment funds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Systematic investment fund</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Equity shares</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                  </tr>
+                                  <tr>
+                                    <td scope="row" class="scope">Collective investment funds</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
+                                    <td class="border-bottom-0">Coming soon.</td>
                                   </tr>
                                 </tbody>
                               </table>
