some minor changes

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Current value Vs Invested value</h4>
                     <canvas id="rec-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -292,6 +292,9 @@
                     <h4 class="font-weight-normal mb-3">Reccuring Amount <i class="mdi mdi-cash mdi-24px float-right"></i>
                     </h4>
                     <h3 class="fd-5" id="rec-ra">Loading ...</h3>
+                    <h4 class="font-weight-normal mb-3">Growth Rate <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+                    </h4>
+                    <h4 class="mb-5" id="rd-pro-mar">Loading ...</h4>
                   </div>
                 </div>
               </div>
@@ -316,7 +319,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Current value Vs Invested value</h4>
                     <canvas id="fd-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -331,6 +334,9 @@
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-clock mdi-24px float-right"></i>
                     </h4>
                     <h3 class="fd-5" id="fd-md">Loading ...</h3>
+                    <h4 class="font-weight-normal mb-3">Growth Rate <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+                    </h4>
+                    <h4 class="mb-5" id="td-pro-mar">Loading ...</h4>
                   </div>
                 </div>
               </div>
@@ -355,7 +361,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Current value Vs Invested value</h4>
                     <canvas id="cd-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -370,7 +376,9 @@
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
                     <h3 class="fd-5" id="cd-md">Loading ...</h3>
-                    
+                    <h4 class="font-weight-normal mb-3">Growth Rate <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+                    </h4>
+                    <h4 class="mb-5" id="cd-pro-mar">Loading ...</h4>
                   </div>
                 </div>
               </div>
@@ -395,7 +403,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Current value Vs Invested value</h4>
                     <canvas id="idr-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -432,7 +440,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Current value Vs Invested value</h4>
                     <canvas id="cc-bar" style="height:250px"></canvas>
                   </div>
                 </div>
