--- a/pention.html
+++ b/pention.html
@@ -51,10 +51,7 @@
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
-                <input type="checkbox"> Demo Bank 1</input><br>
-                <input type="checkbox"> Demo Bank 2 </input><br>
-                <input type="checkbox"> Demo Bank 3</input><br>
-                <input type="checkbox"> Demo Bank 4 </input>
+                <span type="button" onclick="logout()"> Sign out    </span>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
