--- a/total.html
+++ b/total.html
@@ -52,10 +52,7 @@
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
-                <input type="checkbox"> Demo Bank 1</input><br>
-                <input type="checkbox"> Demo Bank 2 </input><br>
-                <input type="checkbox"> Demo Bank 3</input><br>
-                <input type="checkbox"> Demo Bank 4 </input>
+                <span type="button" onclick="logout()"> Sign out    </span>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
@@ -88,12 +85,6 @@
               <a class="nav-link" href="index.html">
                 <span class="menu-title">Dashboard</span>
                 <i class="mdi mdi-home menu-icon"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pages/charts/chartjs.html">
-                <span class="menu-title">Charts</span>
-                <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
            
