--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                   <li class="nav-item"> <a class="nav-link" href="#sec3">Term Deposite</a></li>
                   <li class="nav-item"> <a class="nav-link" href="#sec4">Certificate of deposite</a></li>
                   <li class="nav-item"> <a class="nav-link" href="#sec5">Indian deposit recipt</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="#sec6">Credit Card</a></li>
                 </ul>
               </div>
             </li>
