--- a/investment.html
+++ b/investment.html
@@ -105,6 +105,7 @@
                   <li class="nav-item"> <a class="nav-link" href="index.html#sec3">Recurring Deposite</a></li>
                   <li class="nav-item"> <a class="nav-link" href="index.html#sec4">Certificate of deposite</a></li>
                   <li class="nav-item"> <a class="nav-link" href="index.html#sec5">Indian deposit recipt</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="index.html#sec6">Credit Card</a></li>
                 </ul>
               </div>
             </li>
