--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;width:200px" aria-labelledby="profileDropdown" id="bank-list">
-                <input type="checkbox"> Demo Bank 1</input><br>
-                <input type="checkbox"> Demo Bank 2 </input><br>
-                <input type="checkbox"> Demo Bank 3</input><br>
-                <input type="checkbox"> Demo Bank 4 </input><br>
-                <span type="button"> Sign out    </span>
+                <span type="button" onclick="logout()"> Sign out    </span>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
