--- a/investment.html
+++ b/investment.html
@@ -193,6 +193,9 @@
                     <h4 class="font-weight-normal mb-3">Growth Rate <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
                     <h4 class="mb-5" id="mut-pro-mar">Loading ...</h4>
+                    <h4 class="font-weight-normal mb-3">Provider <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
+                    </h4>
+                    <h4 class="mb-5" id="mf-amc">Loading ...</h4>
                   </div>
                 </div>
               </div>
@@ -338,9 +341,7 @@
                   <div class="card-body">
                     <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="nps-pi" style="height:250px"></canvas>
-                    <h4 class="font-weight-normal mb-3">Current Value <i class="mdi mdi-diamond mdi-24px float-right"></i>
-                    </h4>
-                    <h2 class="mb-5" id="nps-cv">95,5741</h2>
+                    
                   </div>
                 </div>
               </div>
@@ -351,10 +352,13 @@
                     
                     <h4 class="font-weight-normal mb-3">Tier I State<i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5" id="nps-t1">Loading...</h2>
+                    <h3 class="mb-5" id="nps-t1">Loading...</h3>
                     <h4 class="font-weight-normal mb-3">Tier II State<i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5" id="nps-t2">Loading...</h2>
+                    <h3 class="mb-5" id="nps-t2">Loading...</h3>
+                    <h4 class="font-weight-normal mb-3">Current Value <i class="mdi mdi-diamond mdi-24px float-right"></i>
+                    </h4>
+                    <h2 class="mb-5" id="nps-cv">95,5741</h2>
                   </div>
                 </div>
               </div>
