--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="js/jwt-decode.min.js"></script>
+
     <!-- End layout styles -->
   </head>
   <body>
@@ -47,7 +49,7 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1 text-black">User</p>
+                  <p class="mb-1 text-black" id="phn-no">User</p>
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;width:200px" aria-labelledby="profileDropdown" id="bank-list">
@@ -76,7 +78,7 @@
                   <img src="assets/images/faces/face1.jpg" alt="profile">
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">User</span>
+                  <span class="font-weight-bold mb-2"id="phn-noa">User</span>
                 </div>
               </a>
             </li>
