--- a/total.html
+++ b/total.html
@@ -48,7 +48,7 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1 text-black">User</p>
+                  <p class="mb-1 text-black" id="phn-no">User</p>
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
@@ -77,7 +77,7 @@
                   <img src="assets/images/faces/face1.jpg" alt="profile">
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">User</span>
+                  <span class="font-weight-bold mb-2" id="phn-noa">User</span>
                 </div>
               </a>
             </li>
