search fully implimented

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="input-group-prepend bg-transparent">
                   <i class="input-group-text border-0 mdi mdi-magnify"></i>
                 </div>
-                <input onclick="myFunction()" type="text" id="myInput" class="form-control bg-transparent border-0 dropbtn" placeholder="Search deposit.." onkeyup="filterFunction()">
+                <input onclick="myFunction()" type="text" id="myInput" class="form-control bg-transparent border-0 dropbtn" placeholder="Search..." onkeyup="filterFunction()">
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#sec1">Deposit</a>
                   <a href="#sec2">Recurring deposit</a>
@@ -46,6 +46,23 @@
                   <a href="#sec4">Certificate of deposit</a>
                   <a href="#sec5">Indian deposit recipt</a>
                   <a href="#sec6">Credit Card</a>
+                  <a href="insurance.html#sec1">Insurance Policies</a>
+                  <a href="insurance.html#sec2">ULIP</a>
+                  <a href="pention.html#sec1">Employee provident fund</a>
+                  <a href="pention.html#sec2">Public provident fund</a>
+                  <a href="investment.html#sec1">Mutual funds</a>
+                  <a href="investment.html#sec2">Bonds</a>
+                  <a href="investment.html#sec3">Deventures</a>
+                  <a href="investment.html#sec4">Exchange Traded Fund</a>
+                  <a href="investment.html#sec5">National pension system</a>
+                  <a href="investment.html#sec6">Government securities</a>
+                  <a href="investment.html#sec7">Commercial Papers</a>
+                  <a href="investment.html#sec8">Real estate investment trusts</a>
+                  <a href="investment.html#sec9">Infrastructure investment funds</a>
+                  <a href="investment.html#sec10">Alternate investment funds</a>
+                  <a href="investment.html#sec11">Systematic investment plan</a>
+                  <a href="investment.html#sec12">Equity shares</a>
+                  <a href="investment.html#sec13">Collective investment scheme</a>
                 </div>
               </div>
             </form>
