--- a/pention.html
+++ b/pention.html
@@ -15,6 +15,8 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/dropdown.css">
+    <script src="assets/js/dropdown.js"></script>
     <!-- End layout styles -->
   </head>
   <body>
@@ -35,7 +37,32 @@
                 <div class="input-group-prepend bg-transparent">
                   <i class="input-group-text border-0 mdi mdi-magnify"></i>
                 </div>
-                <input type="text" class="form-control bg-transparent border-0" placeholder="Search projects">
+                <input onclick="myFunction()" type="text" id="myInput" class="form-control bg-transparent border-0 dropbtn" placeholder="Search..." onkeyup="filterFunction()">
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="index.html#sec1">Deposit</a>
+                  <a href="index.html#sec2">Recurring deposit</a>
+                  <a href="index.html#sec3">Term Deposit</a>
+                  <a href="index.html#sec4">Certificate of deposit</a>
+                  <a href="index.html#sec5">Indian deposit recipt</a>
+                  <a href="index.html#sec6">Credit Card</a>
+                  <a href="insurance.html#sec1">Insurance Policies</a>
+                  <a href="insurance.html#sec2">ULIP</a>
+                  <a href="#sec1">Employee provident fund</a>
+                  <a href="#sec2">Public provident fund</a>
+                  <a href="investment.html#sec1">Mutual funds</a>
+                  <a href="investment.html#sec2">Bonds</a>
+                  <a href="investment.html#sec3">Deventures</a>
+                  <a href="investment.html#sec4">Exchange Traded Fund</a>
+                  <a href="investment.html#sec5">National pension system</a>
+                  <a href="investment.html#sec6">Government securities</a>
+                  <a href="investment.html#sec7">Commercial Papers</a>
+                  <a href="investment.html#sec8">Real estate investment trusts</a>
+                  <a href="investment.html#sec9">Infrastructure investment funds</a>
+                  <a href="investment.html#sec10">Alternate investment funds</a>
+                  <a href="investment.html#sec11">Systematic investment plan</a>
+                  <a href="investment.html#sec12">Equity shares</a>
+                  <a href="investment.html#sec13">Collective investment scheme</a>
+                </div>
               </div>
             </form>
           </div>
